@@ -42,4 +42,4 @@ date version nhelpfiles nobjects ndatasets Rlines srclines
 "2025-07-24" "3.3-1" 150 328 0 13326 3270
 "2025-09-24" "3.3-2" 150 328 0 13356 3270
 "2025-11-29" "3.4-0" 160 370 0 14990 3270
-"2026-01-19" "3.4-0.020" 162 374 0 15506 3270
+"2026-01-28" "3.4-0.021" 162 374 0 15506 3270
